added links to GAN_AE_Data_Augmentation.ipynb

--- a/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb
+++ b/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment 5 - GANs and AEs for Data Augmentation"
+    "# Assignment 5 - GANs and VAEs for Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### [Conditional Generative Adversarial Networks (GANs)](https://keras.io/examples/generative/conditional_gan/)\n",
+    "\n",
+    "### [Conditional Variational Autoencoder (VAE)](https://github.com/nnormandin/Conditional_VAE/blob/master/Conditional_VAE.ipynb)"
    ]
   },
   {
