--- a/CPSC393Assignment5/GAN_AE_Data_Augmentation_v01.ipynb
+++ b/CPSC393Assignment5/GAN_AE_Data_Augmentation_v01.ipynb
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,30 +587,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "in user code:\n\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 860, in train_step\n        loss = self.compute_loss(x, y, y_pred, sample_weight)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 918, in compute_loss\n        return self.compiled_loss(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\compile_utils.py\", line 239, in __call__\n        self._loss_metric.update_state(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\utils\\metrics_utils.py\", line 70, in decorated\n        update_op = update_state_fn(*args, **kwargs)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\metrics.py\", line 178, in update_state_fn\n        return ag_update_state(*args, **kwargs)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\metrics.py\", line 455, in update_state  **\n        sample_weight = tf.__internal__.ops.broadcast_weights(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\keras_tensor.py\", line 254, in __array__\n        raise TypeError(\n\n    TypeError: You are passing KerasTensor(type_spec=TensorSpec(shape=(), dtype=tf.float32, name=None), name='Placeholder:0', description=\"created by layer 'tf.cast_4'\"), an intermediate Keras symbolic input/output, to a TF API that does not allow registering custom dispatchers, such as `tf.cond`, `tf.function`, gradient tapes, or `tf.map_fn`. Keras Functional model construction only supports TF API calls that *do* support dispatching, such as `tf.math.add` or `tf.reshape`. Other APIs cannot be called directly on symbolic Kerasinputs/outputs. You can work around this limitation by putting the operation in a custom Keras layer `call` and calling that layer on this symbolic input/output.\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mf:\\PythonStuff\\CPSC_393_Machine_Learning\\CPSC393Assignment5\\GAN_AE_Data_Augmentation.ipynb Cell 23'\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/PythonStuff/CPSC_393_Machine_Learning/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb#ch0000022?line=1'>2</a>\u001b[0m cvae\u001b[39m.\u001b[39mcompile(optimizer\u001b[39m=\u001b[39moptim, loss\u001b[39m=\u001b[39mvae_loss, metrics \u001b[39m=\u001b[39m [KL_loss, recon_loss])\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/PythonStuff/CPSC_393_Machine_Learning/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb#ch0000022?line=3'>4</a>\u001b[0m \u001b[39m# compile and fit\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/f%3A/PythonStuff/CPSC_393_Machine_Learning/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb#ch0000022?line=4'>5</a>\u001b[0m cvae_hist \u001b[39m=\u001b[39m cvae\u001b[39m.\u001b[39;49mfit([X_train, y_train], X_train, verbose \u001b[39m=\u001b[39;49m \u001b[39m1\u001b[39;49m, batch_size\u001b[39m=\u001b[39;49mm, epochs\u001b[39m=\u001b[39;49mn_epoch,\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/PythonStuff/CPSC_393_Machine_Learning/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb#ch0000022?line=5'>6</a>\u001b[0m \t\t\t\t\t\t\tvalidation_data \u001b[39m=\u001b[39;49m ([X_test, y_test], X_test),\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/PythonStuff/CPSC_393_Machine_Learning/CPSC393Assignment5/GAN_AE_Data_Augmentation.ipynb#ch0000022?line=6'>7</a>\u001b[0m \t\t\t\t\t\t\tcallbacks \u001b[39m=\u001b[39;49m [EarlyStopping(patience \u001b[39m=\u001b[39;49m \u001b[39m5\u001b[39;49m)])\n",
-      "File \u001b[1;32mf:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\utils\\traceback_utils.py:67\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/keras/utils/traceback_utils.py?line=64'>65</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint: disable=broad-except\u001b[39;00m\n\u001b[0;32m     <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/keras/utils/traceback_utils.py?line=65'>66</a>\u001b[0m   filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[1;32m---> <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/keras/utils/traceback_utils.py?line=66'>67</a>\u001b[0m   \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39m\n\u001b[0;32m     <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/keras/utils/traceback_utils.py?line=67'>68</a>\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/keras/utils/traceback_utils.py?line=68'>69</a>\u001b[0m   \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32mf:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\tensorflow\\python\\framework\\func_graph.py:1147\u001b[0m, in \u001b[0;36mfunc_graph_from_py_func.<locals>.autograph_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m   <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/tensorflow/python/framework/func_graph.py?line=1144'>1145</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:  \u001b[39m# pylint:disable=broad-except\u001b[39;00m\n\u001b[0;32m   <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/tensorflow/python/framework/func_graph.py?line=1145'>1146</a>\u001b[0m   \u001b[39mif\u001b[39;00m \u001b[39mhasattr\u001b[39m(e, \u001b[39m\"\u001b[39m\u001b[39mag_error_metadata\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m-> <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/tensorflow/python/framework/func_graph.py?line=1146'>1147</a>\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mag_error_metadata\u001b[39m.\u001b[39mto_exception(e)\n\u001b[0;32m   <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/tensorflow/python/framework/func_graph.py?line=1147'>1148</a>\u001b[0m   \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   <a href='file:///f%3A/PythonStuff/CPSC_393_Machine_Learning/venv2/lib/site-packages/tensorflow/python/framework/func_graph.py?line=1148'>1149</a>\u001b[0m     \u001b[39mraise\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: in user code:\n\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1021, in train_function  *\n        return step_function(self, iterator)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1010, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 1000, in run_step  **\n        outputs = model.train_step(data)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 860, in train_step\n        loss = self.compute_loss(x, y, y_pred, sample_weight)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\training.py\", line 918, in compute_loss\n        return self.compiled_loss(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\compile_utils.py\", line 239, in __call__\n        self._loss_metric.update_state(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\utils\\metrics_utils.py\", line 70, in decorated\n        update_op = update_state_fn(*args, **kwargs)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\metrics.py\", line 178, in update_state_fn\n        return ag_update_state(*args, **kwargs)\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\metrics.py\", line 455, in update_state  **\n        sample_weight = tf.__internal__.ops.broadcast_weights(\n    File \"f:\\PythonStuff\\CPSC_393_Machine_Learning\\venv2\\lib\\site-packages\\keras\\engine\\keras_tensor.py\", line 254, in __array__\n        raise TypeError(\n\n    TypeError: You are passing KerasTensor(type_spec=TensorSpec(shape=(), dtype=tf.float32, name=None), name='Placeholder:0', description=\"created by layer 'tf.cast_4'\"), an intermediate Keras symbolic input/output, to a TF API that does not allow registering custom dispatchers, such as `tf.cond`, `tf.function`, gradient tapes, or `tf.map_fn`. Keras Functional model construction only supports TF API calls that *do* support dispatching, such as `tf.math.add` or `tf.reshape`. Other APIs cannot be called directly on symbolic Kerasinputs/outputs. You can work around this limitation by putting the operation in a custom Keras layer `call` and calling that layer on this symbolic input/output.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Training\n",
     "cvae.compile(optimizer=optim, loss=vae_loss, metrics = [KL_loss, recon_loss])\n",
@@ -619,6 +598,48 @@
     "cvae_hist = cvae.fit([X_train, y_train], X_train, verbose = 1, batch_size=m, epochs=n_epoch,\n",
     "\t\t\t\t\t\t\tvalidation_data = ([X_test, y_test], X_test),\n",
     "\t\t\t\t\t\t\tcallbacks = [EarlyStopping(patience = 5)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf \n",
+    "tf.test.is_built_with_cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.config.list_physical_devices('GPU')\n",
+    "tf.test.is_gpu_available(cuda_only=False, min_cuda_compute_capability=None)"
    ]
   }
  ],
